@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:29944
+  FORMAL BUILD NUMBER:29945
 */
 
-#define PRODUCT_VER_STRING "3.0.0.29944"
-#define FILE_VER_STRING "WI-T3.0.0.29944"
-#define LICENSE_VER_STRING "WI-T3.0.0.29944"
-#define FILE_VER_NUMBER 3, 0, 0, 29944
+#define PRODUCT_VER_STRING "3.0.0.29945"
+#define FILE_VER_STRING "WI-T3.0.0.29945"
+#define LICENSE_VER_STRING "WI-T3.0.0.29945"
+#define FILE_VER_NUMBER 3, 0, 0, 29945
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "29944"
+#define FB_BUILD_NO "29945"
 #define FB_BUILD_TYPE "T"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Unstable"
