@@ -1,3 +1,7 @@
+ 2012-04-26 09:40  paulbeach 
+   M builds/install/misc/firebird.conf.in
+Make the conf. parameter DummyPacketInterval more accurate.
+
  2012-04-25 16:00  asfernandes 
    M src/jrd/recsrc/WindowedStream.cpp
 Fix window functions.
